--- a/config/database.yml
+++ b/config/database.yml
@@ -12,7 +12,7 @@ development:
   database: Publify_development
   pool: 5
   username: root
-  password:
+  password: admin
   host: localhost
 
 # Warning: The database defined as "test" will be erased and
@@ -25,7 +25,7 @@ test:
   database: Publify_test
   pool: 5
   username: root
-  password:
+  password: admin
   host: localhost
 
 production:
